# gantt-chart

./: .env  .gcloudignore  .python-version  GOOGLE_CLOUD.md  README.md  app.yaml  gunicorn_config.py  main.py  pyproject.toml  requirements.txt
app/: serve_app.py  simple_app.py  wsgi_app.py
app/assets/: custom_styles.css
data/: initial_tasks.json  interuptions.json  milestones.json  updated_tasks.json
src/app/: serve_app.py
src/model/: gantt_chart.py
src/utils/: data_loading.py
