[tool.poetry]
name = "gantt-chart"
version = "0.1.0"
description = "make simple gantt charts in python. Suitable for phd students and others working independently on long projects, who don't want to pay for project management software, but want professional looking gantt charts."
authors = ["Carrow Morris-Wiltshire"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry-env-test = "^0.1.1"
dash = "^2.17.1"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
